--- a/index.org
+++ b/index.org
@@ -92,7 +92,7 @@ Some more information about this can be found in the [[http://orgmode.org/worg/o
      small files, to save bandwidth.  
    - If you really need it, you can also have the entire manual in a
      [[file:org.html][single monolithic file]].
-   - Download the documentation in other formats: [[file:org.pdf][PDF]], [[file:org][Info]], or [[file:org.texi][TeXInfo]].
+   - Download the documentation as a  [[file:org.pdf][PDF document]].
    - There is also a [[http://hpcgi1.nifty.com/spen/index.cgi?OrgMode%2fManual][Japanese translation]] of the manual (version 4.60),
      produced by Takeshi Okano.
    - The Org manual is a GNU Manual released under the GFDL.  If you
