--- a/Changes.org
+++ b/Changes.org
@@ -11,7 +11,7 @@
 #+LINK_HOME: http://orgmode.org
 
 
-* Version 6.13 (in preparation)
+* Version 6.13
   :PROPERTIES:
   :VISIBILITY: content
   :END:
