Finalize the relative-timer setup.
This cleans up the implementation of the timer.  Most important change
is that, after starting a time list with `C-c C-x -', you can then
simply use M-RET to add new items, which is addictive!

--- a/Changes.org
+++ b/Changes.org
@@ -34,6 +34,10 @@
       Insert a description list item with the current relative
       time.  With a prefix argument, first reset the timer to 0.
 
+    - =M-RET= ::
+      Once the time list has been initiated, you can also use the
+      normal item-creating command to insert the next timer item.
+
     - =C-c C-x 0= :: 
       Reset the timer without inserting anything into the buffer.
       By default, the timer is reset to 0.  When called with a
