Show inherited tags in the agenda.
This patch does a lot of things.  First, it makes sure that the tags
transferred to the agenda as text properties on each line are do carry
information about there origin (in the form of an `inherited' text
property).  Then it modifies the function creating agenda lines so
that inherited tags will be listed and identified as such in the
agenda.

This new feature can be turned off with a new variable,
`org-agenda-show-inherited-tags'.

--- a/Changes.org
+++ b/Changes.org
@@ -69,6 +69,14 @@
     Thanks for Richard Riley for the idea and to Andy Stewart for
     the implementation.
 
+*** The agenda shows now all tags, including inherited ones.
+
+    This request has come up often, most recently it was
+    formulated by Tassilo Horn.
+
+    If you prefer the old behavior of only showing the local
+    tags, customize the variable =org-agenda-show-inherited-tags=.
+
 * Version 6.13
 
 ** Overview
