--- a/index.org
+++ b/index.org
@@ -37,7 +37,12 @@ structured ASCII file, HTML, and LaTeX.
 
 * News
 
-Check out the [[file:GoogleTech.org][Google Tech Talk]] about Org-mode.
+- Check out [[http://article.gmane.org/gmane.emacs.orgmode/8547][Russel Adams' presentations]] with the Houston Linux User
+  Group.  This is a two part video with much of the first part about
+  other stuff, but the end of the first part and all of the second is
+  really about Org-mode.
+
+- Check out the [[file:GoogleTech.org][Google Tech Talk]] about Org-mode.
 
 * Current Version (6.13a) and Compatibility
 
