Better handling of export options.
This patch improves the internal handling of the large number of
export options that Org-mode has.  In particular, it now defines a
single constant, `org-export-plist-vars' that contains the full list
of options, and how these can be accessed through variables, and
through the #+OPTIONS line.  Before the patch, there used to be a
separate list or the OPTIONS handling, which has gotten out of sync.
This now no longer can happen.

Also, this patch adds two new variables, `org-export-with-priority',
and `org-export-with-todo-keywords', which can be used to turn the
export of TODO keywords and priority cookies on and off, so that these
can simply disappear and not be shown in the exported file.  In fact,
the default for the priority cookie is to remove it.

--- a/Changes.org
+++ b/Changes.org
@@ -19,7 +19,6 @@
 ** Overview
 
 ** Details
-
 *** New relative timer to support timed notes
 
     Org now supports taking timed notes, useful for example while
@@ -98,6 +97,18 @@
     week, month, and year, respectively
 
     Thanks to Linday Todd for this proposal.
+
+*** Control for exporting meta data
+
+    All the metadata in a headline, i.e. the TODO keyword, the
+    priority cookie, and the tags, can now be excluded from
+    export with appropriate options:
+
+    | Variable                      | Publishing property | OPTIONS switch |
+    |-------------------------------+---------------------+----------------|
+    | org-export-with-todo-keywords | :todo-keywords      | todo:          |
+    | org-export-with-tags          | :tags               | tags:          |
+    | org-export-with-priority      | :priority           | pri:           |
 
 * Version 6.13
 
